deployment/redis/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access
  namespace: spydle
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: matchmaker
        - podSelector:
            matchLabels:
              app: gameserver
      ports:
        - protocol: TCP
          port: 6379
